@@ -1,3 +1,7 @@
+2002-02-01  Michael Meeks  <michael@ximian.com>
+
+	* gnome-vfs.keys.in: replace EOG with image-viewer.
+
 2002-01-31  Bradford Hovinen  <hovinen@ximian.com>
 
 	* gnome-vfs.keys.in: Added category, use_category_default fields
